enable max heap